--- a/app/src/main/res/layout-v21/activity_registro.xml
+++ b/app/src/main/res/layout-v21/activity_registro.xml
@@ -101,8 +101,8 @@
 
         <Button
             android:id="@+id/registrar_button"
-            android:layout_width="312dp"
-            android:layout_height="501dp"
+            android:layout_width="0sp"
+            android:layout_height="60dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="108dp"
