--- a/app/src/main/res/layout-v3/fragment_buscar.xml
+++ b/app/src/main/res/layout-v3/fragment_buscar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,9 +11,7 @@
         android:id="@+id/buscar_edit_text_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="8sp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:helperText="@string/campoobligatorio">
+        android:paddingLeft="8sp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/buscar_input_edit_text"
@@ -22,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10sp"
             android:hint="@string/nombre"
-            android:inputType="text"
+            android:inputType="textPersonName"
             android:textSize="24sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
