se creo clase Deudor,paquete database y se creo fragmento borrar, actualizar con su proceso de busqueda con room

--- a/app/src/main/res/layout-v14/activity_registro.xml
+++ b/app/src/main/res/layout-v14/activity_registro.xml
@@ -83,7 +83,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <EditText
-            android:id="@+id/contraseña_edit_text"
+            android:id="@+id/contrasena_edit_text"
             android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -125,7 +125,7 @@
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/contraseña_edit_text" />
+            app:layout_constraintTop_toBottomOf="@+id/contrasena_edit_text" />
 
         <TextView
             android:id="@+id/respuesta_text_View"
