--- a/app/src/main/res/layout/fragment_buscar.xml
+++ b/app/src/main/res/layout/fragment_buscar.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nombre_buscar_edit_text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
@@ -10,10 +11,10 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/buscar_edit_text_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="8sp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:helperText="@string/campoobligatorio">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -27,7 +28,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buscar_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30sp"
@@ -38,14 +39,14 @@
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/telefono_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Telefono"
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/valor_deuda_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/deuda"
