--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,18 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F488A5AB"
-    android:backgroundTint="#88A5AB"
+    android:background="#92ADB2"
     tools:context=".ui.splash.SplashActivity">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="230dp"
-        android:layout_height="184dp"
-        android:backgroundTint="#88A5AB"
+        android:layout_width="288dp"
+        android:layout_height="289dp"
+        android:backgroundTint="#92ADB2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.34"
         app:srcCompat="@mipmap/ic_logo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
