--- a/app/src/main/res/layout/fragment_crear.xml
+++ b/app/src/main/res/layout/fragment_crear.xml
@@ -64,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
-        android:background="@color/colorPrimary"
+        android:backgroundTint="@color/colorPrimary"
         android:gravity="center_horizontal"
         android:text="@string/guardar"
         android:textColor="#FFFFFF"
